--- a/crawler/package.json
+++ b/crawler/package.json
@@ -1,21 +1,13 @@
 {
-  "name": "nodejs-mfee16",
+  "name": "crawler",
   "version": "1.0.0",
-  "description": "abc",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fran0628/nodejs-mfee16.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/fran0628/nodejs-mfee16/issues"
-  },
-  "homepage": "https://github.com/fran0628/nodejs-mfee16#readme",
   "dependencies": {
     "axios": "^0.21.1"
   }
