--- a/simple-express/package.json
+++ b/simple-express/package.json
@@ -5,13 +5,22 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node server.js"
+    "dev": "node server.js",
+    "watch": "npx browser-sync start --config bs-config.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.7.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.7",
     "pug": "^3.0.2"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.26.14",
+    "webpack-dev-server": "^3.0.0"
   }
 }
